--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-id-swiper": "^4.0.0",
     "react-redux": "^9.1.2",
