--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@reduxjs/toolkit": "^2.2.4",
+    "axios": "^1.7.1",
     "embla-carousel-react": "^8.0.4",
+    "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-id-swiper": "^4.0.0",
+    "react-image-zoom": "^1.3.1",
+    "react-image-zooom": "^1.3.5",
+    "react-medium-image-zoom": "^5.2.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
     "react-stars": "^2.2.5",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
