--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.7.1",
     "embla-carousel-react": "^8.0.4",
     "flowbite-react": "^0.9.0",
+    "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
@@ -33,8 +35,10 @@
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "react-stars": "^2.2.5",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.3"
+    "swiper": "^11.1.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
