--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@headlessui/react": "^2.0.3",
+    "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@reduxjs/toolkit": "^2.2.4",
+    "@tippyjs/react": "^4.2.6",
+    "antd": "^5.18.0",
     "axios": "^1.7.1",
     "embla-carousel-react": "^8.0.4",
     "flowbite-react": "^0.9.0",
