--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-slick": "^0.30.2",
     "react-stars": "^2.2.5",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.3",
     "yup": "^1.4.0"
